--- a/bbsite/accounts/templates/accounts/profile.html
+++ b/bbsite/accounts/templates/accounts/profile.html
@@ -1,7 +1,7 @@
 {% extends 'default.html' %}
  
 {% block content %}
-<h1>Профиль</h1>
+<h1>Профиль пользователя {{user}}</h1>
  
 <form method="post">
     {% csrf_token %}
@@ -16,5 +16,5 @@
 
 <hr>
 <p ><a href="{% url 'accounts:password_change' %}">Сменить пароль</a></p>
-<p ><a href="{% url 'accounts:comments_user' %}">Отклики к моим статьям</a></p>
+<p ><a href="{% url 'comments_user' user.id %}">Отклики к моим статьям</a></p>
 {% endblock %}
