--- a/bbsite/bbapp/templates/bbapp/list_comments.html
+++ b/bbsite/bbapp/templates/bbapp/list_comments.html
@@ -5,21 +5,30 @@ Comments
 {% endblock title %}
 
 {% block content %}
-    <h1>Отклики к моим статьям</h1>
+<h1>Отклики к моим статьям</h1>
 <!--    <h5>Количество: {{ comments|length }}</h5>-->
-    <hr>
+<hr>
+<!--<form action="" method="get">-->
+<!--	-->
+<!--	<input type="submit" value="Find">-->
+<!--</form>-->
+<!--{{ filterset.form.as_p }}-->
 {% for comment in comments %}
+
 <ul class="list-articles">
     <li>
 	<div class="article-panel">
 		<p class="first">Автор статьи: {{comment.post}}</p>
 		<p class="last">Дата: {{comment.dateCreation|date:"d-m-Y H:i:s"}}</p>
 	</div>
+		<p class="first">Статья: {{comment.commentPost}}</p>
 		<table>
 			<tr>
-				<td align=" left">{{ comment.commentUser }}:</td>
+				<td align="left">{{ comment.commentUser }}:</td>
                <td>{{ comment.text|linebreaks|truncatewords:40 }}</td>
-               <td></td>
+
+               	<td align="left"><a href="#">Принять</a></td>
+				<td align="right"><a href="#">Удалить</a></td>
 			</tr>
 		</table>
 <!--			<div class="clear"></div>-->
