--- a/bbsite/accounts/templates/accounts/profile.html
+++ b/bbsite/accounts/templates/accounts/profile.html
@@ -16,5 +16,5 @@
 
 <hr>
 <p ><a href="{% url 'accounts:password_change' %}">Сменить пароль</a></p>
-<p ><a href="{% url 'comments_user' user.id %}">Отклики к моим статьям</a></p>
+<p ><a href="{% url 'post_user' user.id %}">Мои статьи</a></p>
 {% endblock %}
